traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:23: error: not enough arguments for method setPos: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
      case 0 => setPos(debutDiag(numDiag))//on commence la prochaine diagonale
                      ^